Tue Jun 12 21:08:20 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* INSTALL: Fix PATH setting for cross-compile case.

Tue Jun 12 20:26:15 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* help_cpu.h (help_cpuImm8s4): Use uint32_t instead of int as
	parameter type and return value.  Renamed to Help_CPUImm8s4.
	(Help_SplitByImm8s4): Use uint32_t types as parameter types and
	unsigned as return value.
	* help_cpu.c (help_cpuImm8s4, Help_SplitByImm8s4): Likewise.
	* m_cpuctrl.c, fix.c, lit.c, m_cpumem.c: Follow help_cpu.h changes.

Tue Jun 12 03:51:23 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpuctrl.c (ADR_RelocUpdaterCore): Implement canSwitch parameter.
	* regression/tests_pass/adr.s: Update testcase.
	* regression/tests_pass/storagemap_register.s: Likewise.

Tue Jun 12 03:21:03 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* reloc.c, reloc.h, lit.c, symbol.h, m_cpuctrl.c, help_cop.c,
	m_cpumem.c, directive_data.c, area.c, directive_data.h, area.h,
	value.h: Get rid of Reloc_QueueExprUpdate.
	* lex.c: Add comment.
	* regression/tests_pass/adr.s: Update as we can now generate MOV/MVN
	instead of ADD/SUB.
	* regression/tests_pass/include/load_literal_basic.s: Add comments.
	* regression/tests_pass/ldr_from_addr.s: Enhance testcase.
	* regression/tests_pass/operator_string.s: Likewise.
	* configure.ac: Increase version to 2.01.

Tue Jun 12 03:13:01 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* code.c (Code_Free): Make Code ptr argument const.
	* code.h (Code_Free): Likewise.

Tue Jun 12 03:09:56 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/builtinvar_pc.s: Rename areas Code4 to Code5
	and 2nd Code3 to Code4 so that the new Code4 is really testing what
	it should test.

Tue Jun 12 02:35:24 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* lit.c (Lit_DumpPool): Convert late defined integer symbol value into
	floating point value when used as floating point literal.