@@ -241,8 +241,8 @@ tstlbl6	#	32
 	ORG	&200
 	%	16
 	DCD	1
-	MOV	r1, #&210		; ADD r1, pc, #-8 - 4 would also be possible
-	MOV	r2, #&220		; ADD r2, pc, #-8 + 8
+	ADD r1, pc, #-8 - 4		; MOV r1, #&210 would also be possible but less preferred.
+	ADD r2, pc, #-8 + 8		; MOV r2, #&220 would also be possible but less preferred.
 	ADD	r2, r2, #0
 	DCD	2
 
@@ -256,8 +256,8 @@ tstlbl6	#	32
 	AREA	Code12, CODE, ABS
 	%	16
 	DCD	1
-	MOV	r1, #&10		; ADD r1, pc, #-8 - 4 would also be possible
-	MOV	r2, #&1C		; ADD r2, pc, #-8 + 4 would also be possible
+	ADD r1, pc, #-8 - 4		; MOV r1, #&10 would also be possible but less preferred.
+	ADD r2, pc, #-8 + 4		; MOV r2, #&1C would also be possible but less preferred.
 	DCD	2
 
 	DCD	3
@@ -267,6 +267,21 @@ tstlbl6	#	32
 	%	&1100 - 8
 	DCD	4
 	]
+
+	AREA	Code13, CODE
+	ORG	&100000
+	DCD	1,2,3,4
+	[ :LNOT: REFERENCE
+Code13lbl
+	ADR	r2, &120		; Can only be done with MOV, this gives a warning
+	ADR	r3, Code13lbl		; SUB r3, pc, #&c
+	ADR	r4, &100000		; SUB r4, pc, #&20
+	|
+	MOV	r2, #&120
+	SUB	r3, pc, #&c
+	SUB	r4, pc, #&20
+	]
+
 	]
 
 	END
